# BenchmarkSDKvsNDK

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/benchmark/sdkvsndk/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  benchmark_native.cpp  native-lib.cpp
app/src/main/java/com/benchmark/sdkvsndk/: MainActivity.kt
app/src/main/java/com/benchmark/sdkvsndk/adapter/: TeachingCardsAdapter.kt
app/src/main/java/com/benchmark/sdkvsndk/benchmark/: Algorithms.kt  BenchmarkAlgorithm.kt  NativeBenchmark.kt  RunBenchmark.kt
app/src/main/java/com/benchmark/sdkvsndk/fragment/: Benchmark.kt  BenchmarkFragment.kt  Home.kt  HomeFragment.kt  StatisticsFragment.kt
app/src/main/java/com/benchmark/sdkvsndk/model/: BenchmarkResult.kt  BenchmarkResults.kt  CardData.kt  InputSize.kt
app/src/main/java/com/benchmark/sdkvsndk/viewmodel/: BenchmarkViewModel.kt  HomeViewModel.kt  StatisticsViewModel.kt
app/src/main/res/drawable/: broken_image.xml  psychology.xml  timer_off.xml
app/src/main/res/layout/: content_teaching_cards.xml  fragment_benchmark.xml  fragment_home.xml  fragment_statistics.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  dimen.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/benchmark/sdkvsndk/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
